# agenteIA

latest_ai_development/: README.md  main.py  pyproject.toml
latest_ai_development/src/: __init__.py  crew.py  main.py  tripulação.py
latest_ai_development/src/config/: agents.yaml  crew.py  tasks.yaml
latest_ai_development/src/config/agents/: llm_agent.py
latest_ai_development/src/config/agents/agents/: catalog_agent.py  purchase_agent.py
latest_ai_development/src/dados/: mock_catalog.json
latest_ai_development/src/tools/: __init__.py  custom_tool.py
