[project]
name = "latest_ai_development"
version = "0.1.0"
description = "latest-ai-development using crewAI"
authors = [{ name = "Vanessa", email = "vanessa@exemplo.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]
keywords = ["AI", "crewAI", "autonomous agents", "machine learning"]
license = "MIT"

[project.scripts]
latest_ai_development = "latest_ai_development.main:run"
run_crew = "latest_ai_development.main:run"
train = "latest_ai_development.main:train"
replay = "latest_ai_development.main:replay"
test = "latest_ai_development.main:test"

[project.urls]
"Homepage" = "https://github.com/seu_usuario/latest_ai_development"
"Documentation" = "https://seu_site/docs"
"Repository" = "https://github.com/seu_usuario/latest_ai_development"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
entrypoint = "src/latest_ai_development/main.py"
type = "crew"